<resources>
    <string name="app_name">Task3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="list">List</string>
    <string name="start_title">Время потренироваться</string>
    <string name="start_text">Нажмите на кнопку ниже и начинаем трекать активность</string>
    <string name="sport">Спорт</string>
    <string name="distance">Дистанция</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="start">Старт</string>
    <string name="finish">Финиш</string>
    <string name="commentaries">Комментарий</string>
    <string name="nickname">Никнейм</string>
    <string name="password">Пароль</string>
    <string name="try_password">Повторите пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="bicycle">Велосипед</string>
    <string name="begin">Начать</string>
    <string name="lets_go">Погнали? :)</string>
</resources>